# JSON-Parser

./: .gitignore  CMakeLists.txt  README.md  main.cpp
JSONfiles/: empty.json  file.json  organisation.json  test.json
includes/: JSONException.hpp  JSONFactory.hpp  JSONManager.hpp  JSONParser.hpp  JSONValidator.hpp  ProgramStarter.hpp  Startup.hpp
includes/commands/: CloseCommand.hpp  Command.hpp  CommandHandler.hpp  ContainsCommand.hpp  CreateCommand.hpp  DeleteCommand.hpp  ExitCommand.hpp  MoveCommand.hpp  OpenCommand.hpp  PrintCommand.hpp  SaveAsCommand.hpp  SaveCommand.hpp  SearchCommand.hpp  SetCommand.hpp  ValidateCommand.hpp
includes/json_types/: JSONArray.hpp  JSONBool.hpp  JSONKeyPair.hpp  JSONNull.hpp  JSONNumber.hpp  JSONObject.hpp  JSONString.hpp  JSONValue.hpp
includes/utility/: Constants.hpp  Helpers.hpp  String.hpp  Vector.hpp
source/: JSONException.cpp  JSONFactory.cpp  JSONManager.cpp  JSONParser.cpp  JSONValidator.cpp  ProgramStarter.cpp  Startup.cpp
source/commands/: CloseCommand.cpp  Command.cpp  CommandHandler.cpp  ContainsCommand.cpp  CreateCommand.cpp  DeleteCommand.cpp  ExitCommand.cpp  MoveCommand.cpp  OpenCommand.cpp  PrintCommand.cpp  SaveAsCommand.cpp  SaveCommand.cpp  SearchCommand.cpp  SetCommand.cpp  ValidateCommand.cpp
source/json_types/: JSONArray.cpp  JSONBool.cpp  JSONKeyPair.cpp  JSONNull.cpp  JSONNumber.cpp  JSONObject.cpp  JSONString.cpp  JSONValue.cpp
source/utility/: Helpers.cpp  String.cpp
tests/: testFactory.cpp  testManager.cpp  testParser.cpp  testValidation.cpp  to_test.txt
(+66 files in other folders)
